JumpScript/tests/baselines/reference/functionOverloadsOutOfOrder.errors.txt
tests/cases/compiler/functionOverloadsOutOfOrder.jump(6,13): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/compiler/functionOverloadsOutOfOrder.jump(14,13): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/compiler/functionOverloadsOutOfOrder.jump (2 errors) ====
    class d {
        private foo(n: number): string;
        private foo(ns: any) {
            return ns.toString();
        }
        private foo(s: string): string;
                ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    
    class e {
        private foo(ns: any) {
            return ns.toString();
        }
        private foo(s: string): string;
        private foo(n: number): string;
                ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }